Local-setup/local-fin-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fin-deploy
  labels:
    tier: fin-backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      tier: fin-backend
  template:
    metadata:
      labels:
        tier: fin-backend
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
      - name: oliveissuerfin-service
        image: varukoluaravind22/devops-docker-images:oliveissuerfin-1.0.0.9
        imagePullPolicy: IfNotPresent
        command:
          - java
        args:
          - -Dlog.dir=/upiapp/upinew/oliveissuerfin/log/${POD_NAME}
          - -Dtomcat.dir=/upiapp/upinew/oliveissuerfin/tomcat/logs/${POD_NAME}
          - -jar
          - upi-cbi-cbs-fin-1.0.0.UAT.jar
        ports:
          - containerPort: 8085
        volumeMounts:
          - name: app-mounts
            mountPath: /upiapp/upinew/oliveissuerfin/application.properties
            subPath: application.properties

          - name: app-mounts
            mountPath: /upiapp/upinew/oliveissuerfin/deploy
            subPath: deploy

          - name: app-mounts
            mountPath: /upiapp/upinew/oliveissuerfin/cfg
            subPath: cfg

          - name: app-mounts
            mountPath: /upiapp/upinew/oliveissuerfin/logback.xml
            subPath: logback.xml

          - name: log
            mountPath: /upiapp/upinew/oliveissuerfin/log

          - name: logs
            mountPath: /upiapp/upinew/oliveissuerfin/logs

          - name: tomcat
            mountPath: /upiapp/upinew/oliveissuerfin/tomcat/logs

      volumes:
        - name: app-mounts
          persistentVolumeClaim:
            claimName: fin-pvc

        - name: log
          emptyDir: {}

        - name: logs
          emptyDir: {}

        - name: tomcat
          emptyDir: {}
---
apiVersion: v1 
kind: Service
metadata: 
  name: fin-svc
spec: 
  type: ClusterIP
  selector: 
    tier: fin-backend
  ports:
  - port: 8085
