Local-setup/ingress.resources.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resources
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /upi/ReqPay(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: fin-svc
            port:
              number: 8085
      - path: /upi/ReqListAccount(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: meta-svc
            port:
              number: 8083
